--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.10.14",
     "util": "^0.12.3"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
